@@ -1,3 +1,9 @@
+2018-04-17  Martin Liska  <mliska@suse.cz>
+
+	PR lto/85405
+	* ipa-devirt.c (odr_types_equivalent_p): Remove trailing
+	in message, remote space in between '_G' and '('.
+
 2018-04-17  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/85281
